# wapc-rust-template

./: .template  Cargo.toml  Makefile  schema.widl  wapc.yaml
