[package]
name = "<%- name %>"
version = "<%- version %>"
description = "<%- description %>"
authors = ["<%- author %>"]
edition = "2018"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[features]
default = ["guest"]
guest = []

[dependencies]
wapc-guest = { version = "1.0", features = ["codec"] }
serde = { version = "1.0.115", features = ["derive"] }
once_cell = "1.9"

[dev-dependencies]


[profile.release]
# Optimize for small code size
opt-level = "s"
lto = true
